--- a/build.config
+++ b/build.config
@@ -11,22 +11,6 @@ core/install
 #core/docs
 #core/test
 
-# # Plugins.
-# plugins/asciidoc
-# plugins/bootstrap
-# plugins/c_src
-# plugins/ci
-# plugins/ct
-# plugins/dialyzer
-# plugins/edoc
-# plugins/elvis
-# plugins/erlydtl
-# plugins/escript
-# plugins/eunit
-# plugins/relx
-# plugins/shell
-# plugins/triq
-# plugins/xref
-#
-# # Plugins enhancing the functionality of other plugins.
-# plugins/cover
+# Plugins.
+plugins/bootstrap
+
