--- a/test/Makefile
+++ b/test/Makefile
@@ -1,3 +1,3 @@
-PROJECT = hello
-PROJECT_PATH = github.com/glejeune/hello
+PROJECT_MAIN = hello
+PROJECT_MODULE = github.com/glejeune/hello
 include golang.mk
